--- a/index.html
+++ b/index.html
@@ -3,116 +3,220 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
+    <!-- normalize підключається переед всіма стилями -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
-        <a href="./index.html" target="_blank">WebStudio</a>
+        <a class="logo header_logo" href="./index.html" target="_blank">
+          Web<span class="logo_span">Studio</span></a
+        >
 
-        <ul>
-          <li><a href="#" target="_blank">Studio</a></li>
-          <li><a href="#" target="_blank">Portfolio</a></li>
-          <li><a href="#" target="_blank">Contacts</a></li>
+        <ul class="header_nav">
+          <li class="header_nav_item">
+            <a class="nav_item_link" href="./index.html" target="_blank"
+              >Studio</a
+            >
+          </li>
+          <li class="header_nav_item">
+            <a class="nav_item_link" href="" target="_blank">Portfolio</a>
+          </li>
+          <li class="header_nav_item">
+            <a class="nav_item_link" href="" target="_blank">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="address">
+        <ul class="header_address">
+          <li class="header_address_item">
+            <a class="address_item_link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="header_address_item">
+            <a class="address_item_link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <!-- #region main banner -->
+      <section class="section_baner">
+        <h1 class="baner_title">Effective Solutions for Your Business</h1>
+        <button class="baner_btn" type="button">Order Service</button>
       </section>
-
-      <section>
-        <h2>Strategy</h2>
+      <!-- #endregion main banner -->
+      <!-- #region main Strategy -->
+      <section class="section_strategy">
+        <h2 class="srtategy_title_invisible">Strategy</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="srtategy_title">Strategy</h3>
+            <p class="srtategy_paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="srtategy_title">Punctuality</h3>
+            <p class="srtategy_paragraph">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="srtategy_title">Diligence</h3>
+            <p class="srtategy_paragraph">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="srtategy_title">Technologies</h3>
+            <p class="srtategy_paragraph">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <!-- #endregion main Strategy -->
+      <!-- #region main team -->
+      <section class="section_team">
+        <h2 class="section_team_title">Our Team</h2>
+        <ul class="team_list">
+          <li class="team_list_item">
             <img
-              src="./images/imgMark.jpg"
+              src="./images/mark.jpg"
               alt="product designer"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team_item_name">Mark Guerrero</h3>
+            <p class="team_item_job">Product Designer</p>
           </li>
-          <li>
+          <li class="team_list_item">
             <img
-              src="./images/imgTom.jpg"
+              src="./images/tom.jpg"
               alt="frontend developer"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team_item_name">Tom Ford</h3>
+            <p class="team_item_job">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team_list_item">
             <img
-              src="./images/imgCamila.jpg"
+              src="./images/camila.jpg"
               alt="marketing"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team_item_name">Camila Garcia</h3>
+            <p class="team_item_job">Marketing</p>
           </li>
-          <li>
+          <li class="team_list_item">
             <img
-              src="./images/imgDaniel.jpg"
+              src="./images/daniel.jpg"
               alt="ui designer"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team_item_name">Daniel Wilson</h3>
+            <p class="team_item_job">UI Designer</p>
           </li>
         </ul>
       </section>
+      <!-- #endregion main team -->
+      <!-- #region main Portfolio -->
+      <section class="section_portfolio">
+        <h2 class="portfolio_title">Our Portfolio</h2>
+        <ul class="portfolio_list">
+          <li class="portfolio_list_item">
+            <img
+              src="./images/bancing.jpg"
+              width="360"
+              height="300"
+              alt="bancing app"
+            />
+            <h3 class="item_service">Banking App</h3>
+            <p class="servce_product">App</p>
+          </li>
+          <li class="portfolio_list_item">
+            <img
+              src="./images/cashless_payment.jpg"
+              width="360"
+              height="300"
+              alt="cashless_payment"
+            />
+            <h3 class="item_service">Cashless Payment</h3>
+            <p class="servce_product">Marketing</p>
+          </li>
+          <li class="portfolio_list_item">
+            <img
+              src="./images/meditation_app.jpg"
+              width="360"
+              height="300"
+              alt="meditation_app"
+            />
+            <h3 class="item_service">Meditation App</h3>
+            <p class="servce_product">App</p>
+          </li>
+          <!--  -->
+          <li class="portfolio_list_item">
+            <img
+              src="./images/taxi_service.jpg"
+              width="360"
+              height="300"
+              alt="taxi_service"
+            />
+            <h3 class="item_service">Taxi Service</h3>
+            <p class="servce_product">Marketing</p>
+          </li>
+          <li class="portfolio_list_item">
+            <img
+              src="./images/screen_illustrations.jpg"
+              width="360"
+              height="300"
+              alt="screen_illustrations"
+            />
+            <h3 class="item_service">Screen Illustrations</h3>
+            <p class="servce_product">Design</p>
+          </li>
+          <li class="portfolio_list_item">
+            <img
+              src="./images/online_courses.jpg"
+              width="360"
+              height="300"
+              alt="online_courses"
+            />
+            <h3 class="item_service">Online Courses</h3>
+            <p class="servce_product">Marketing</p>
+          </li>
+        </ul>
+      </section>
+      <!-- #endregion main Portfolio -->
     </main>
-    <footer>
-      <a href="./index.html" target="_blank">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo footer_logo" href="./index.html" target="_blank">
+        Web<span class="logo_span">Studio</span></a
+      >
+      <p class="footer_text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
