--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <!-- normalize підключається переед всіма стилями -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
+
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    /> -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,207 +28,245 @@
   </head>
   <body>
     <header class="header">
-      <nav>
-        <a class="logo header_logo" href="./index.html" target="_blank">
-          Web<span class="logo_span">Studio</span></a
-        >
+      <div class="container container-flex padding-header">
+        <nav class="container-flex">
+          <a class="logo header_logo" href="./index.html" target="_blank">
+            Web<span class="logo_span">Studio</span></a
+          >
 
-        <ul class="header_nav">
-          <li class="header_nav_item">
-            <a class="nav_item_link" href="./index.html" target="_blank"
-              >Studio</a
-            >
-          </li>
-          <li class="header_nav_item">
-            <a class="nav_item_link" href="" target="_blank">Portfolio</a>
-          </li>
-          <li class="header_nav_item">
-            <a class="nav_item_link" href="" target="_blank">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="header_address">
-          <li class="header_address_item">
-            <a class="address_item_link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="header_address_item">
-            <a class="address_item_link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+          <ul class="header_nav container-flex">
+            <li class="header_nav_item">
+              <a class="nav_item_link" href="./index.html" target="_blank"
+                >Studio</a
+              >
+            </li>
+            <li class="header_nav_item">
+              <a class="nav_item_link" href="" target="_blank">Portfolio</a>
+            </li>
+            <li class="header_nav_item">
+              <a class="nav_item_link" href="" target="_blank">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+
+        <address class="address">
+          <ul class="header_address container-flex">
+            <li class="header_address_item">
+              <a class="address_item_link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header_address_item left">
+              <a class="address_item_link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <!-- #region main banner -->
-      <section class="section_baner">
-        <h1 class="baner_title">Effective Solutions for Your Business</h1>
-        <button class="baner_btn" type="button">Order Service</button>
+      <section class="section_baner section">
+        <div class="container">
+          <h1 class="baner_title title-center">
+            Effective Solutions for Your Business
+          </h1>
+          <button class="baner_btn" type="button">Order Service</button>
+        </div>
       </section>
       <!-- #endregion main banner -->
       <!-- #region main Strategy -->
-      <section class="section_strategy">
-        <h2 class="srtategy_title_invisible">Strategy</h2>
-        <ul>
-          <li>
-            <h3 class="srtategy_title">Strategy</h3>
-            <p class="srtategy_paragraph">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="srtategy_title">Punctuality</h3>
-            <p class="srtategy_paragraph">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="srtategy_title">Diligence</h3>
-            <p class="srtategy_paragraph">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="srtategy_title">Technologies</h3>
-            <p class="srtategy_paragraph">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="section_strategy section">
+        <div class="container">
+          <h2 class="visually-hidden">Strategy</h2>
+          <ul class="strategy-list">
+            <li class="strategy-list-item">
+              <h3 class="srtategy_title">Strategy</h3>
+              <p class="srtategy_paragraph">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="strategy-list-item">
+              <h3 class="srtategy_title">Punctuality</h3>
+              <p class="srtategy_paragraph">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="strategy-list-item">
+              <h3 class="srtategy_title">Diligence</h3>
+              <p class="srtategy_paragraph">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="strategy-list-item">
+              <h3 class="srtategy_title">Technologies</h3>
+              <p class="srtategy_paragraph">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- #endregion main Strategy -->
       <!-- #region main team -->
-      <section class="section_team">
-        <h2 class="section_team_title">Our Team</h2>
-        <ul class="team_list">
-          <li class="team_list_item">
-            <img
-              src="./images/mark.jpg"
-              alt="product designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team_item_name">Mark Guerrero</h3>
-            <p class="team_item_job">Product Designer</p>
-          </li>
-          <li class="team_list_item">
-            <img
-              src="./images/tom.jpg"
-              alt="frontend developer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team_item_name">Tom Ford</h3>
-            <p class="team_item_job">Frontend Developer</p>
-          </li>
-          <li class="team_list_item">
-            <img
-              src="./images/camila.jpg"
-              alt="marketing"
-              width="264"
-              height="260"
-            />
-            <h3 class="team_item_name">Camila Garcia</h3>
-            <p class="team_item_job">Marketing</p>
-          </li>
-          <li class="team_list_item">
-            <img
-              src="./images/daniel.jpg"
-              alt="ui designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team_item_name">Daniel Wilson</h3>
-            <p class="team_item_job">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section_team section">
+        <div class="container">
+          <h2 class="section_team_title title-center">Our Team</h2>
+          <ul class="team_list">
+            <li class="team_list_item">
+              <img
+                src="./images/mark.jpg"
+                alt="product designer"
+                width="264"
+                height="260"
+              />
+              <div class="wrap-text">
+                <h3 class="team_item_name">Mark Guerrero</h3>
+                <p class="team_item_job">Product Designer</p>
+              </div>
+            </li>
+            <li class="team_list_item">
+              <img
+                src="./images/tom.jpg"
+                alt="frontend developer"
+                width="264"
+                height="260"
+              />
+              <div class="wrap-text">
+                <h3 class="team_item_name">Tom Ford</h3>
+                <p class="team_item_job">Frontend Developer</p>
+              </div>
+            </li>
+
+            <li class="team_list_item">
+              <img
+                src="./images/camila.jpg"
+                alt="marketing"
+                width="264"
+                height="260"
+              />
+              <div class="wrap-text">
+                <h3 class="team_item_name">Camila Garcia</h3>
+                <p class="team_item_job">Marketing</p>
+              </div>
+            </li>
+            <li class="team_list_item">
+              <img
+                src="./images/daniel.jpg"
+                alt="ui designer"
+                width="264"
+                height="260"
+              />
+              <div class="wrap-text">
+                <h3 class="team_item_name">Daniel Wilson</h3>
+                <p class="team_item_job">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- #endregion main team -->
       <!-- #region main Portfolio -->
-      <section class="section_portfolio">
-        <h2 class="portfolio_title">Our Portfolio</h2>
-        <ul class="portfolio_list">
-          <li class="portfolio_list_item">
-            <img
-              src="./images/bancing.jpg"
-              width="360"
-              height="300"
-              alt="bancing app"
-            />
-            <h3 class="item_service">Banking App</h3>
-            <p class="servce_product">App</p>
-          </li>
-          <li class="portfolio_list_item">
-            <img
-              src="./images/cashless_payment.jpg"
-              width="360"
-              height="300"
-              alt="cashless_payment"
-            />
-            <h3 class="item_service">Cashless Payment</h3>
-            <p class="servce_product">Marketing</p>
-          </li>
-          <li class="portfolio_list_item">
-            <img
-              src="./images/meditation_app.jpg"
-              width="360"
-              height="300"
-              alt="meditation_app"
-            />
-            <h3 class="item_service">Meditation App</h3>
-            <p class="servce_product">App</p>
-          </li>
-          <!--  -->
-          <li class="portfolio_list_item">
-            <img
-              src="./images/taxi_service.jpg"
-              width="360"
-              height="300"
-              alt="taxi_service"
-            />
-            <h3 class="item_service">Taxi Service</h3>
-            <p class="servce_product">Marketing</p>
-          </li>
-          <li class="portfolio_list_item">
-            <img
-              src="./images/screen_illustrations.jpg"
-              width="360"
-              height="300"
-              alt="screen_illustrations"
-            />
-            <h3 class="item_service">Screen Illustrations</h3>
-            <p class="servce_product">Design</p>
-          </li>
-          <li class="portfolio_list_item">
-            <img
-              src="./images/online_courses.jpg"
-              width="360"
-              height="300"
-              alt="online_courses"
-            />
-            <h3 class="item_service">Online Courses</h3>
-            <p class="servce_product">Marketing</p>
-          </li>
-        </ul>
+      <section class="section_portfolio section">
+        <div class="container">
+          <h2 class="portfolio_title title-center">Our Portfolio</h2>
+          <ul class="portfolio_list">
+            <li class="portfolio_list_item">
+              <img
+                src="./images/bancing.jpg"
+                width="360"
+                height="300"
+                alt="bancing app"
+              />
+              <div class="portfolio-wrap">
+                <h3 class="item_service">Banking App</h3>
+                <p class="servce_product">App</p>
+              </div>
+            </li>
+            <li class="portfolio_list_item">
+              <img
+                src="./images/cashless_payment.jpg"
+                width="360"
+                height="300"
+                alt="cashless_payment"
+              />
+              <div class="portfolio-wrap">
+                <h3 class="item_service">Cashless Payment</h3>
+                <p class="servce_product">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio_list_item">
+              <img
+                src="./images/meditation_app.jpg"
+                width="360"
+                height="300"
+                alt="meditation_app"
+              />
+              <div class="portfolio-wrap">
+                <h3 class="item_service">Meditation App</h3>
+                <p class="servce_product">App</p>
+              </div>
+            </li>
+            <!--  -->
+            <li class="portfolio_list_item">
+              <img
+                src="./images/taxi_service.jpg"
+                width="360"
+                height="300"
+                alt="taxi_service"
+              />
+              <div class="portfolio-wrap">
+                <h3 class="item_service">Taxi Service</h3>
+                <p class="servce_product">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio_list_item">
+              <img
+                src="./images/screen_illustrations.jpg"
+                width="360"
+                height="300"
+                alt="screen_illustrations"
+              />
+              <div class="portfolio-wrap">
+                <h3 class="item_service">Screen Illustrations</h3>
+                <p class="servce_product">Design</p>
+              </div>
+            </li>
+            <li class="portfolio_list_item">
+              <img
+                src="./images/online_courses.jpg"
+                width="360"
+                height="300"
+                alt="online_courses"
+              />
+              <div class="portfolio-wrap">
+                <h3 class="item_service">Online Courses</h3>
+                <p class="servce_product">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- #endregion main Portfolio -->
     </main>
     <footer class="footer">
-      <a class="logo footer_logo" href="./index.html" target="_blank">
-        Web<span class="logo_span">Studio</span></a
-      >
-      <p class="footer_text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container wrap-footer">
+        <p class="test">
+          <a class="logo footer_logo" href="./index.html" target="_blank">
+            Web<span class="logo_span">Studio</span></a
+          >
+        </p>
+        <p class="footer_text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
