--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="container container-flex padding-header">
         <nav class="container-flex">
           <a class="logo header_logo" href="./index.html" target="_blank">
-            Web<span class="logo_span">Studio</span></a
+            Web<span class="header_logo_span">Studio</span></a
           >
 
           <ul class="header_nav container-flex">
