--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <header class="header">
       <div class="container container-flex padding-header">
-        <nav class="container-flex">
+        <nav class="container-flex center_nav">
           <a class="logo header_logo" href="./index.html" target="_blank">
             Web<span class="header_logo_span">Studio</span></a
           >
