--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 >info@devstudio.com</a
               >
             </li>
-            <li class="header_address_item left">
+            <li class="header_address_item">
               <a class="address_item_link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
@@ -256,7 +256,7 @@
       <!-- #endregion main Portfolio -->
     </main>
     <footer class="footer">
-      <div class="container wrap-footer">
+      <div class="container">
         <a class="logo footer_logo" href="./index.html" target="_blank">
           Web<span class="logo_span">Studio</span></a
         >
